# nubes

./: README  requirements.txt  setup.cfg  setup.py  tox.ini
nubes/: dispatcher.py
nubes/cmd/: __init__.py
nubes/common/: models.py
nubes/connectors/: base.py
nubes/connectors/aws/: connector.py
nubes/connectors/openstack/: __init__.py  connector.py
nubes/tests/unit/connectors/openstack/: test_connector.py
