[metadata]
name = nubes
author = omninubes
summary = A client for many IaaS clouds
description-file = README
lices = Apache-2
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    nubes
[entry_points]
console_scripts =
    nubes = nubes.cmd:main